# pyro-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  index_dataset.py  pyproject.toml
.github/workflows/: lint.yml  pylint.yml
chat/: chat_stream.py
dataset/: training_set.jsonl  validation_set.jsonl
evaluation_metrics/: README.md  calculate_metrics.py  config.py  generation_metrics.py  open_ai_service.py  pyproject.toml  retrieval_metrics.py
finetuning/: Fine-tuning-results.csv  validation_set.jsonl
src/pyro/: server.py
src/pyro/services/: files.py
