[tool.poetry]
name = "pyro"
version = "0.1.0"
description = ""
authors = ["jainal09 <jainal09gosaliya@gmail.com>"]
readme = "README.md"
packages = [{ include = "src/pyro" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
unstructured = { extras = ["pdf"], version = "^0.10.5" }
weaviate-client = "^3.23.0"
langchain = "^0.0.312"
openai = "^0.27.9"
httpx = "^0.24.1"
pytest = "^7.4.0"
pyyaml = "^6.0.1"
streamlit = "^1.36.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
isort = "^5.12.0"
autoflake = "<2.1.1"
flake8-pyproject = "^1.2.3"
tox = "4.4.0"
bandit = "^1.7.5"
black = "^24.4.2"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
force_single_line = false
line_length = 88
skip_glob = [".venv/*", "src/rpcs/grpc_gen/*"]
verbose = false

[tool.black]
line-length = 88
exclude = "/.venv|src/rpcs/grpc_gen"
force-exclude = "/.venv|src/rpcs/grpc_gen"


[tool.flake8]
max-line-length = 120
exclude = ["venv", ".venv", "src/rpcs/grpc_gen", ".git", "__pycache__" ,"__init__.py",".mypy_cache",".pytest_cache",".vscode",
    ".github", ".tox", "build", "dist", "docs", "examples", "scripts", "tests", "setup.py", "setup.cfg",
     "pyproject.toml", "src/rpcs/procedures/helpers/grpc_request_validator_helpers/custom_validators.py"]
extend-ignore = "E203"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore_init_module_imports = true
exclude = [".venv", "src/rpcs/grpc_gen"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
